infra/k8s/manifests/network-policies/adservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice-ingress
  namespace: online-boutique

spec:
  podSelector:
    matchLabels:
      app: adservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 9555
