infra/k8s/manifests/network-policies/cartservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartservice-ingress
  namespace: online-boutique

spec:
  podSelector:
    matchLabels:
      app: cartservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 7070
