infra/k8s/manifests/network-policies/checkoutservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-ingress
  namespace: online-boutique

spec:
  podSelector:
    matchLabels:
      app: checkoutservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 5050
