infra/k8s/manifests/network-policies/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: online-boutique

spec:
  podSelector: {}

  policyTypes:
    - Ingress
