infra/k8s/manifests/network-policies/emailservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice-ingress
  namespace: online-boutique

spec:
  podSelector:
    matchLabels:
      app: emailservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 8080
