infra/k8s/manifests/network-policies/paymentservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paymentservice-ingress
  namespace: online-boutique

spec:
  podSelector:
    matchLabels:
      app: paymentservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 50051
