infra/k8s/manifests/network-policies/productcatalogservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-ingress
  namespace: online-boutique

spec:
  podSelector:
    matchLabels:
      app: productcatalogservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: checkoutservice
        - podSelector:
            matchLabels:
              app: recommendationservice
      ports:
        - protocol: TCP
          port: 3550
