infra/k8s/manifests/network-policies/redis-cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cart-ingress
  namespace: online-boutique

spec:
  podSelector:
    matchLabels:
      app: redis-cart

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - protocol: TCP
          port: 6379
